# mfja_3rd_floor_gz

./: CMakeLists.txt  README.md  multi_robot_usage_guide.tex  package.xml  rail_switch_integration_report.tex
config/: robots.yaml  robots_room_315_only.yaml
launch/: full_floor.launch.py  mfja_3rdf_kuka.launch.py  room_315_only.launch.py
mfja_3rd_floor_description/worlds/: mfja_3rd_floor.world  room_315_only.world
mfja_robot_control_config/: CMakeLists.txt
mfja_robot_control_config/config/: robots.yaml  robots_room_315_only.yaml
mfja_robot_control_config/launch/: multi_robot_sim.launch.py
mfja_robot_control_config/scripts/: conveyor_loop_mode_controller.py  three_position_switch_demo.py
models/carter_droit/: model.config  model.sdf
models/carter_gauche/: model.config  model.sdf
models/ground_plane/: model.sdf
models/kuka_kr6r900sixx/: model.config  model.sdf
models/kuka_table/: model.config  model.sdf
models/lab_table_240cm/: model.config  model.sdf
models/mfja_3rd_floor/: mfja_3rd_floor.sdf
models/montratec_rails_droit/: model.config  model.sdf
models/montratec_rails_left/: model.config  model.sdf
models/room115_closet115/: model.config  model.sdf
models/room115_table2000/: model.config  model.sdf
models/room115_tool_set/: model.config  model.sdf
models/room314_charging_ergotron/: model.config  model.sdf
models/room314_closet1/: model.config  model.sdf
models/room314_table_180cm/: model.config  model.sdf
models/room314_tiagobox/: model.config  model.sdf
models/room_315/: model.config  model.sdf
models/shutle_2_droit/: model.config  model.sdf
models/shuttle_1_droit/: model.config  model.sdf
models/shuttle_1_left/: model.config  model.sdf
urdf/: kuka_kr6r900sixx.urdf  staubli_tx2_60l.urdf  tiago.urdf  yaskawa_hc10.urdf  yaskawa_hc10dt.urdf
worlds/: mfja_3rd_floor.world  room_315_only.world
(+42 files in other folders)
